apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: media
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/part-of: homelab
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - name: http
      port: 4533
      targetPort: 4533
      nodePort: 30533
      protocol: TCP
